# WSCodeGenerator

./: CMakeLists.txt  README.md  ws_generate.py
examples/: uris.txt
templates/: WebService.cpp  WebService.h  WebServiceFunctions.cpp  WebServiceFunctions.h
